--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,12 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
+    <include
+        android:id="@+id/appbar"
+        layout="@layout/app_bar" />
+
     <com.google.android.material.tabs.TabLayout
+        android:layout_below="@id/appbar"
         android:id="@+id/tab_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -43,6 +48,7 @@
             android:layout_gravity="center"
             android:backgroundTint="#EFF6F6"
             android:src="@drawable/ic_create_24dp"
+            app:borderWidth="0dp"
             app:fabSize="mini" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -50,7 +56,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
-            android:src="@drawable/ic_comment_white_24dp" />
+            tools:src="@drawable/ic_comment_white_24dp" />
 
     </LinearLayout>
 
