--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@android:color/black"
@@ -70,7 +71,7 @@
                     android:layout_centerVertical="true"
                     android:layout_gravity="center_vertical"
                     android:padding="10dp"
-                    android:src="@drawable/ic_switch_camera_white_24dp" />
+                    app:srcCompat="@drawable/ic_switch_camera_white_24dp" />
 
 
                 <LinearLayout
@@ -100,7 +101,7 @@
                         android:layout_centerVertical="true"
                         android:layout_gravity="center_horizontal|center_vertical"
                         android:layout_marginBottom="20dp"
-                        android:src="@drawable/ic_radio_button_checked_white_24dp" />
+                        app:srcCompat="@drawable/ic_radio_button_checked_white_24dp" />
 
                 </LinearLayout>
 
@@ -113,7 +114,7 @@
                     android:layout_centerVertical="true"
                     android:layout_gravity="center_vertical"
                     android:padding="10dp"
-                    android:src="@drawable/ic_flash_off_white_24dp" />
+                    app:srcCompat="@drawable/ic_flash_off_white_24dp" />
 
 
             </RelativeLayout>
