Phone Authentication with FireBase

--- a/app/src/main/res/layout/fragment_calls_tab.xml
+++ b/app/src/main/res/layout/fragment_calls_tab.xml
@@ -1,7 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-</LinearLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:layout_marginLeft="60dp"
+        android:layout_marginRight="60dp"
+        android:text="To start calling contacts who have WhatsApp, tap call at the bottom of your screen."
+        android:textAlignment="center" />
+
+</RelativeLayout>
