--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -65,56 +65,53 @@
 
                 <ImageView
                     android:id="@+id/imgChangeCamera"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
                     android:layout_alignParentRight="true"
+                    android:layout_alignParentEnd="true"
                     android:layout_centerVertical="true"
                     android:layout_gravity="center_vertical"
-                    android:padding="10dp"
-                    app:srcCompat="@drawable/ic_switch_camera_white_24dp" />
+                    android:paddingEnd="16dp"
+                    android:paddingRight="16dp"
+                    android:src="@drawable/ic_switch_camera_white_24dp" />
 
 
                 <LinearLayout
-
                     android:id="@+id/middleLayout"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
                     android:orientation="vertical">
 
+                    <ImageView
+                        android:id="@+id/imgCapture"
+                        android:layout_width="80dp"
+                        android:layout_height="80dp"
+                        android:layout_gravity="center_horizontal|center_vertical"
+                        android:src="@drawable/ic_radio_button_unchecked_black_24dp" />
+
                     <TextView
 
                         android:id="@+id/hintTextView"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_centerHorizontal="true"
                         android:padding="5dp"
                         android:text="Hold for video, tap for photo"
                         android:textColor="@android:color/white"
                         android:textSize="14sp" />
-
-                    <ImageView
-                        android:id="@+id/imgCapture"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_centerHorizontal="true"
-                        android:layout_centerVertical="true"
-                        android:layout_gravity="center_horizontal|center_vertical"
-                        android:layout_marginBottom="20dp"
-                        app:srcCompat="@drawable/ic_radio_button_checked_white_24dp" />
-
                 </LinearLayout>
 
 
                 <ImageView
                     android:id="@+id/imgFlashOnOff"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
                     android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"
+                    android:paddingLeft="16dp"
                     android:layout_centerVertical="true"
                     android:layout_gravity="center_vertical"
-                    android:padding="10dp"
-                    app:srcCompat="@drawable/ic_flash_off_white_24dp" />
+                    android:src="@drawable/ic_flash_off_white_24dp" />
 
 
             </RelativeLayout>
