--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -96,7 +96,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:padding="5dp"
-                        android:text="Hold for video, tap for photo"
+                        android:text="Hold for video, tap for photoUrl"
                         android:textColor="@android:color/white"
                         android:textSize="14sp" />
                 </LinearLayout>
