--- a/app/src/main/res/layout/item_contact_list.xml
+++ b/app/src/main/res/layout/item_contact_list.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="80dp"
+    android:id="@+id/item_contact_layout"
     android:orientation="vertical"
     android:padding="8dp">
 
@@ -26,44 +27,24 @@
         android:paddingEnd="8dp"
         android:paddingRight="8dp">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:gravity="bottom"
-            android:orientation="horizontal">
-
             <TextView
                 android:id="@+id/tv_username_contact"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:gravity="bottom"
                 android:textColor="@android:color/black"
                 android:textSize="16sp"
                 tools:text="John Snow" />
 
             <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:gravity="end"
-                android:text="MOBILE" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="1"
-            android:gravity="top"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/tv_status_contact"
+                android:id="@+id/tv_about_contact"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="1"
+                android:gravity="top"
                 android:maxLines="1"
                 tools:text="Busy" />
-
-        </LinearLayout>
 
     </LinearLayout>
 
