--- a/app/src/main/res/layout/item_chats.xml
+++ b/app/src/main/res/layout/item_chats.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:id="@+id/layout_user_chat"
     android:layout_height="80dp"
     android:orientation="vertical"
     android:padding="8dp">
