--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -39,6 +39,7 @@
             android:src="@drawable/ic_attach_file_black_24dp" />
 
         <ImageView
+            android:id="@+id/img_attach_picture"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -48,11 +49,11 @@
 
     </LinearLayout>
 
-    <ListView
-        android:id="@+id/listview"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@id/layout_bottom_chat" />
+    <!--    <ListView-->
+    <!--        android:id="@+id/listview"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="match_parent"-->
+    <!--        android:layout_above="@id/layout_bottom_chat" />-->
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_chat"
