--- a/app/src/main/res/layout/dialog_phone_verify.xml
+++ b/app/src/main/res/layout/dialog_phone_verify.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="8dp"
     android:orientation="vertical">
 
     <TextView
@@ -24,5 +25,34 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Is this OK, or would you like to edit the number?" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <Button
+            android:layout_gravity="start"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:text="edit"
+            android:id="@+id/bt_verify_phone_positive" />
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="?attr/actionBarSize"
+            android:layout_weight="1" />
+
+
+        <Button
+            android:layout_gravity="end"
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="wrap_content"
+            android:text="OK" />
+
+    </LinearLayout>
+
 
 </LinearLayout>
