--- a/app/src/main/res/layout/activity_chat_room.xml
+++ b/app/src/main/res/layout/activity_chat_room.xml
@@ -4,13 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/default_wallpaper"
     tools:context=".ChatRoomActivity">
 
-    <FrameLayout
-        android:id="@+id/frame_layout_chat"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
@@ -20,14 +16,23 @@
             android:id="@+id/toolbar_chat_room"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:theme="@style/MyToolbarTheme"
-            android:background="@color/colorPrimary">
+            app:contentInsetLeft="0dp"
+            app:contentInsetStart="0dp"
+            android:background="@color/colorPrimary"
+            android:theme="@style/MyToolbarTheme">
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:gravity="center_vertical"
                 android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/toolbar_back_button"
+                    android:layout_width="25dp"
+                    android:layout_height="25dp"
+                    android:foreground="?attr/selectableItemBackground"
+                    android:src="@drawable/ic_arrow_back_black_24dp" />
 
                 <de.hdodenhof.circleimageview.CircleImageView
                     android:id="@+id/avatar_chat_room"
@@ -47,9 +52,9 @@
                         android:layout_height="0dp"
                         android:layout_weight="1"
                         android:gravity="bottom"
+                        android:text="Imam Candra Kusuma"
                         android:textColor="@android:color/white"
-                        android:textStyle="bold"
-                        android:text="Imam Candra Kusuma" />
+                        android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/last_seen_and_online"
@@ -57,14 +62,86 @@
                         android:layout_height="0dp"
                         android:layout_weight="1"
                         android:gravity="top"
+                        android:text="last seen today at 3:26 PM"
                         android:textColor="#eef4f4"
-                        android:textSize="12sp"
-                        android:text="last seen today at 3:26 PM" />
+                        android:textSize="12sp" />
                 </LinearLayout>
 
             </LinearLayout>
-
         </androidx.appcompat.widget.Toolbar>
     </com.google.android.material.appbar.AppBarLayout>
+
+    <RelativeLayout
+        android:id="@+id/frame_layout_chat"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
+
+        <LinearLayout
+            android:id="@+id/layout_bottom_chat"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_margin="10dp"
+            android:layout_toLeftOf="@id/fab_chat"
+            android:background="@drawable/rounded_rectangle"
+            android:orientation="horizontal">
+
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:paddingLeft="4dp"
+                android:src="@drawable/ic_insert_emoticon_black_24dp" />
+
+            <EditText
+                android:id="@+id/et_message_chat"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_weight="1"
+                android:backgroundTint="@color/fui_transparent"
+                android:hint="Type a Message" />
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_attach_file_black_24dp" />
+
+            <ImageView
+                android:id="@+id/img_attach_picture"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginLeft="6dp"
+                android:paddingRight="4dp"
+                android:src="@drawable/ic_insert_photo_black_24dp" />
+
+        </LinearLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rv_chat"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_above="@id/layout_bottom_chat"
+            android:clipToPadding="false"
+            android:paddingTop="5dp"
+            tools:listitem="@layout/item_chat_outgoing" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab_chat"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginEnd="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginBottom="10dp"
+            android:backgroundTint="#00897b"
+            android:src="@drawable/ic_keyboard_voice_black_24dp" />
+    </RelativeLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
