--- a/app/src/main/res/layout/fragment_chat_tab.xml
+++ b/app/src/main/res/layout/fragment_chat_tab.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -9,4 +9,23 @@
         android:layout_height="match_parent"
         android:id="@+id/recyvlerview_chat_tab" />
 
-</LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="90dp"
+        android:layout_alignParentBottom="true"
+        android:id="@+id/layout_start_chat"
+        android:background="#F1F1F1">
+
+        <TextView
+            android:layout_marginLeft="16dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Start a chat"
+            android:textSize="18sp"
+            android:textColor="@color/colorPrimaryDark"
+            android:layout_gravity="center_vertical"
+            android:drawableRight="@drawable/ic_arrow_forward_black_24dp" />
+    </LinearLayout>
+
+
+</RelativeLayout>
