--- a/app/src/main/res/layout/fragment_status_tab.xml
+++ b/app/src/main/res/layout/fragment_status_tab.xml
@@ -4,19 +4,29 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
-    android:padding="8dp">
+    android:orientation="vertical">
 
     <RelativeLayout
+        android:id="@+id/layout_self_status"
         android:layout_width="wrap_content"
-        android:layout_height="80dp">
+        android:layout_height="60dp"
+        android:padding="8dp">
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/avatar_user_status"
-            android:layout_width="60dp"
-            android:layout_height="60dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:layout_centerVertical="true"
+            android:padding="3dp"
             android:src="@mipmap/ic_launcher" />
+
+        <com.devlomi.circularstatusview.CircularStatusView
+            android:id="@+id/circular_status_count"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_centerVertical="true"
+            app:portion_width="2dp"
+            app:portion_spacing="6dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -31,7 +41,6 @@
             android:paddingRight="8dp">
 
             <TextView
-
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:layout_weight="1"
@@ -41,6 +50,7 @@
                 android:textSize="17sp" />
 
             <TextView
+                android:id="@+id/tv_time_status"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:layout_weight="1"
@@ -51,11 +61,55 @@
 
     </RelativeLayout>
 
-    <ListView
+    <LinearLayout
+        android:visibility="visible"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="30dp"
+        android:background="#F4F4F4"
+        android:id="@+id/layout_recent_updates_status"
+        android:padding="0dp">
 
-    </ListView>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Recent updates"
+            android:layout_gravity="center_vertical"
+            android:paddingLeft="8dp"
+            android:textColor="#6F6F6F"
+            android:textStyle="bold" />
+
+    </LinearLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="8dp"
+        android:id="@+id/rv_recent_updates_status" />
+
+    <LinearLayout
+        android:visibility="visible"
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:background="#F4F4F4"
+        android:id="@+id/layout_viewed_updates_status"
+        android:padding="0dp">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Viewed updates"
+            android:layout_gravity="center_vertical"
+            android:paddingLeft="8dp"
+            android:textColor="#6F6F6F"
+            android:textStyle="bold" />
+
+    </LinearLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="8dp"
+        android:id="@+id/rv_viewed_updates_status" />
 
 
 </LinearLayout>
